tests/ivg/invalid/invalid_ellipse_separator.ivg
format IVG-3
// comma-separated ellipse for IVG-3
ELLIPSE 10,10,5,5
